# open-webui-systray

./: .gitignore  AppConfig.cs  FullscreenHotkeyPolicy.cs  GlobalHotkeyWindow.cs  LICENSE  Launch Release.lnk  MainForm.cs  Program.cs  README.md  Startup.cs  TrayApplicationContext.cs  build-release.ps1  install.sh  open-webui-systray.csproj  pyproject.toml  run-release.ps1  run.sh
data/applications/: io.github.openwebui.systray.desktop
scripts/: render_app_icons.py
src/open_webui_systray/: __init__.py  __main__.py  config.py  dialogs.py  icon_brand.py  kde_global_shortcut.py  mainwindow.py  tray.py
